Fix comment formatting in Grader.java